# payment-pro

./: Accounts DB.txt  CMakeLists.txt  README.md  Transactions DB.txt
Application/: app.c  app.h
Card/: card.c  card.h
Server/: server.c  server.h
Terminal/: terminal.c  terminal.h
Util/: util.c  util.h
